0.22-SNAPSHOT
-------------
Enhancements:
https://github.com/Netflix/genie/issues/17

0.21
----
Enhancements:

https://github.com/Netflix/genie/issues/8
https://github.com/Netflix/genie/issues/14

Bug fixes:

https://github.com/Netflix/genie/issues/5
https://github.com/Netflix/genie/issues/11
https://github.com/Netflix/genie/issues/12

0.20
----
Genie OSS release