@@ -3,6 +3,9 @@
 Enhancements:
 https://github.com/Netflix/genie/issues/17
 
+Bug fixes:
+https://github.com/Netflix/genie/issues/20
+
 0.21
 ----
 Enhancements:
